--- a/taskpane.html
+++ b/taskpane.html
@@ -7,6 +7,10 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <title>Contracts App</title>
+      <!-- Office JavaScript API -->
+    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <script type="text/javascript" src="./dist/app.js"></script>
+
 </head>
 <body>
   <h1>Contracts App</h1>
