--- a/taskpane.html
+++ b/taskpane.html
@@ -20,9 +20,10 @@
       
   </section>
 </body>
-<script src="./src/app.ts"></script>
+<script src="./dist/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 </html>
+
 
 
