--- a/taskpane.html
+++ b/taskpane.html
@@ -16,14 +16,14 @@
   <h1>Contracts App</h1>
   
   <section id="userFormSection">
-    <h2>User Form</h2>
-      
+    <h2>CONTRACTS APP</h2>
+  </section>
+  <section id="notification">
   </section>
 </body>
 <script src="./dist/app.js"></script>
+<!--<script src="./dist/app.js"></script>
+//<script src="./src/app.ts"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 </html>
-
-
-
